{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 121,
  "lineage": "89e294e2-e648-a7e1-4380-e1194df3f030",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edd397b8630ceb37",
            "domain": "vpc",
            "id": "eipalloc-0edd397b8630ceb37",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-217-80-226.compute-1.amazonaws.com",
            "public_ip": "3.217.80.226",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d64c84b71aa8f1d",
            "domain": "vpc",
            "id": "eipalloc-00d64c84b71aa8f1d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-184-73-164-62.compute-1.amazonaws.com",
            "public_ip": "184.73.164.62",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f409bae3775dc8e5",
            "arn": "arn:aws:ec2:us-east-1:491558213709:instance/i-0ad93209eb02a01e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad93209eb02a01e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e07ff404f2563f4",
            "private_dns": "ip-10-0-23-82.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.23.82",
            "public_dns": "ec2-54-89-141-166.compute-1.amazonaws.com",
            "public_ip": "54.89.141.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0127377ed57d9a8b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c3f3d37761d57746"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eadb0a0f497060c4",
            "tags": {
              "Name": "my-instance-public"
            },
            "tags_all": {
              "Name": "my-instance-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3f3d37761d57746"
            ]
          },
          "dependencies": [
            "aws_security_group.example",
            "aws_subnet.public1a",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f409bae3775dc8e5",
            "arn": "arn:aws:ec2:us-east-1:491558213709:instance/i-04ec980053b9852cd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ec980053b9852cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cedebc14f74bdbe7",
            "private_dns": "ip-10-0-34-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.34.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2016d4df57b843a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c3f3d37761d57746"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e47088d7592a40c",
            "tags": {
              "Name": "my-instance-private"
            },
            "tags_all": {
              "Name": "my-instance-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c3f3d37761d57746"
            ]
          },
          "dependencies": [
            "aws_security_group.example",
            "aws_subnet.private1a",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:internet-gateway/igw-0e43fa55b54e0bb42",
            "id": "igw-0e43fa55b54e0bb42",
            "owner_id": "491558213709",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Name": "my-igw"
            },
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edd397b8630ceb37",
            "association_id": "eipassoc-0249c9ba8b26ba9fd",
            "connectivity_type": "public",
            "id": "nat-02770c19c1655a273",
            "network_interface_id": "eni-0b7352ad400c631f8",
            "private_ip": "10.0.23.75",
            "public_ip": "3.217.80.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eadb0a0f497060c4",
            "tags": {
              "Name": "my-nat-gateway-1a"
            },
            "tags_all": {
              "Name": "my-nat-gateway-1a"
            }
          },
          "dependencies": [
            "aws_eip.example-1",
            "aws_subnet.public1a",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d64c84b71aa8f1d",
            "association_id": "eipassoc-0c5254df1966fe242",
            "connectivity_type": "public",
            "id": "nat-08728c0e10370231a",
            "network_interface_id": "eni-00f941bf03312a516",
            "private_ip": "10.0.5.87",
            "public_ip": "184.73.164.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0620b7530cdac77aa",
            "tags": {
              "Name": "my-nat-gateway-1b"
            },
            "tags_all": {
              "Name": "my-nat-gateway-1b"
            }
          },
          "dependencies": [
            "aws_eip.example-2",
            "aws_subnet.public1b",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:route-table/rtb-0be558f87a7292603",
            "id": "rtb-0be558f87a7292603",
            "owner_id": "491558213709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02770c19c1655a273",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-1"
            },
            "tags_all": {
              "Name": "private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example-1",
            "aws_nat_gateway.example-1",
            "aws_subnet.public1a",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:route-table/rtb-0e463daee4f0e5ef0",
            "id": "rtb-0e463daee4f0e5ef0",
            "owner_id": "491558213709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08728c0e10370231a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-2"
            },
            "tags_all": {
              "Name": "private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example-2",
            "aws_nat_gateway.example-2",
            "aws_subnet.public1b",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:route-table/rtb-0565206c86300a023",
            "id": "rtb-0565206c86300a023",
            "owner_id": "491558213709",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e43fa55b54e0bb42",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-1"
            },
            "tags_all": {
              "Name": "public-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00123298d8ce81c63",
            "route_table_id": "rtb-0be558f87a7292603",
            "subnet_id": "subnet-06e47088d7592a40c"
          },
          "dependencies": [
            "aws_eip.example-1",
            "aws_nat_gateway.example-1",
            "aws_route_table.private-rt-1a",
            "aws_subnet.private1a",
            "aws_subnet.public1a",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06017fc79da10c631",
            "route_table_id": "rtb-0e463daee4f0e5ef0",
            "subnet_id": "subnet-028f2be649c088655"
          },
          "dependencies": [
            "aws_eip.example-2",
            "aws_nat_gateway.example-2",
            "aws_route_table.private-rt-1b",
            "aws_subnet.private1b",
            "aws_subnet.public1b",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076afa72e0b7d1b0b",
            "route_table_id": "rtb-0565206c86300a023",
            "subnet_id": "subnet-0eadb0a0f497060c4"
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_route_table.public",
            "aws_subnet.public1a",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032fe649a6b2fe9b1",
            "route_table_id": "rtb-0565206c86300a023",
            "subnet_id": "subnet-0620b7530cdac77aa"
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_route_table.public",
            "aws_subnet.public1b",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:security-group/sg-0c3f3d37761d57746",
            "description": "My security group for EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3f3d37761d57746",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "491558213709",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:subnet/subnet-06e47088d7592a40c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.34.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e47088d7592a40c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491558213709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1a"
            },
            "tags_all": {
              "Name": "private-subnet-1a"
            },
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:subnet/subnet-028f2be649c088655",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028f2be649c088655",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491558213709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1b"
            },
            "tags_all": {
              "Name": "private-subnet-1b"
            },
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:subnet/subnet-0eadb0a0f497060c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eadb0a0f497060c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491558213709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:subnet/subnet-0620b7530cdac77aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0620b7530cdac77aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "491558213709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1b"
            },
            "tags_all": {
              "Name": "public-subnet-1b"
            },
            "vpc_id": "vpc-071dc41e72a86ab8c"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491558213709:vpc/vpc-071dc41e72a86ab8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09673555bcf2f98c8",
            "default_route_table_id": "rtb-020687c722d2477a5",
            "default_security_group_id": "sg-052992caa6b09b1cf",
            "dhcp_options_id": "dopt-030cbae1027ef3ace",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071dc41e72a86ab8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020687c722d2477a5",
            "owner_id": "491558213709",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}